--- a/app/views/museums/index.erb
+++ b/app/views/museums/index.erb
@@ -2,6 +2,6 @@
 
 <ol>
 <% @museums.each do |museum| %>
-<li> <%= button_to museum.title, museum_path(museum) %> </li> <br>
+<li> <%= link_to museum.title, museum %> </li> <br>
 <% end %>
 </ol>
