formatted zip code as 5 digit string

--- a/app/views/queues/index.html.erb
+++ b/app/views/queues/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Museum Queue</h1>
 
-<ol>
+<ul>
   <% if @queue_museums %>
   <% @queue_museums.each do |museum| %>
- <li><%= museum.title %></li>
+ <p><%= link_to museum.title, museum %></p>
     <% end %>
   <% end %>
-</ol>
+</ul>
