--- a/app/views/museums/show.erb
+++ b/app/views/museums/show.erb
@@ -1,6 +1,6 @@
 <h1><%= @museum.title %></h1><br>
 
 <p><%= @museum.to_s %></p>
-<p><%= @museum.zip %></p>
+<p><%= @museum.zip.split(".")[0] %></p>
 <p><%= @museum.url %></p>
 <p><%= @museum.phone %></p>
