--- a/app/views/museums/show.erb
+++ b/app/views/museums/show.erb
@@ -2,5 +2,5 @@
 
 <p><%= @museum.to_s %></p>
 <p><%= @museum.zip.split(".")[0] %></p>
-<p><%= @museum.url %></p>
+<p><%= link_to @museum.url, @museum.url%></p>
 <p><%= @museum.phone %></p>
