hopefully link in queue-controller saves

--- a/app/views/queues/index.html.erb
+++ b/app/views/queues/index.html.erb
@@ -3,7 +3,7 @@
 <ol>
   <% if @queue_museums %>
   <% @queue_museums.each do |museum| %>
- <li><%= museum.title %></li>
+ <li><%= link_to museum.title, museum %></li>
     <% end %>
   <% end %>
 </ol>
