--- a/app/views/museums/show.erb
+++ b/app/views/museums/show.erb
@@ -1,6 +1,6 @@
 <h1><%= @museum.title %></h1><br>
 
-<p><%= @museum.to_s %></p>
+<p><%= @museum.address %></p>
 <p><%= @museum.zip.split(".")[0] %></p>
 <p><%= link_to @museum.url, @museum.url%></p>
 <p><%= @museum.phone %></p>
