--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -3,6 +3,7 @@
 
 
 <%= form_tag(search_path) do %>
-  <%= text_field_tag :search, params[:search] %>
-  <%= submit_tag 'Search', name: nil %>
+<%= label_tag(:title, "Search for a Museum") %>
+  <%= text_field_tag :title, params[:title] %>
+  <%= submit_tag 'Search' %>
 <% end %>
