home Page buttons

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -7,3 +7,7 @@
   <%= text_field_tag :title, params[:title] %>
   <%= submit_tag 'Search' %>
 <% end %>
+<h1>MuseMe</h1><br>
+<p> </p><br>
+
+<%= button_to "View Museums by Borough", boroughs_path, method: :get %>
