--- a/app/views/boroughs/index.html.erb
+++ b/app/views/boroughs/index.html.erb
@@ -5,3 +5,5 @@
   <ul><%= link_to borough.name, borough %></ul><br>
   <% end %>
 </ol>
+<br>
+<%= button_to "Back to Home", home_index_path, method: :get %>
