--- a/app/views/boroughs/show.html.erb
+++ b/app/views/boroughs/show.html.erb
@@ -6,3 +6,5 @@
   <li><%= link_to museum.title, museum %></li><br>
   <% end %>
 </ol>
+<br>
+<%= button_to "Back to Home", home_index_path, method: :get %>
