--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,7 +32,13 @@
    display: inline-block;
    position: relative;
    float: right;
-   
+   border-radius: 12px;
+   padding: 1rem 2rem;
+   margin: 0;
+   background: #0069ed;
+   font-family: nevis;
+   color: white;
+
  }
 
  .queue_button {
