--- a/app/views/application/welcome.erb
+++ b/app/views/application/welcome.erb
@@ -13,3 +13,5 @@
 
 
 <%= inline_svg "museume.svg", class: 'svg-class' %>
+<br>
+<%= button_to "View Museums by Borough", boroughs_path, method: :get %>
