--- a/app/views/application/welcome.erb
+++ b/app/views/application/welcome.erb
@@ -6,7 +6,7 @@
   <%= form_tag(search_path) do %>
   <%= label_tag(:title, "Search for a Museum") %>
     <%= text_field_tag :title, params[:title] %>
-    <%= submit_tag 'Search' %>
+    <%= submit_tag 'Search', class: 'submit_button' %>
   <% end %>
 </div>
 
