--- a/app/views/museums/show.erb
+++ b/app/views/museums/show.erb
@@ -1,10 +1,25 @@
-<div><%= button_to "Queue", queues_index_path %></div>
+<div class="museum_container">
+  <div><%= button_to "Queue", queues_index_path, class: 'show_queue_button'%></div>
 
-<h1><%= @museum.title %></h1><br>
+  <div class="museum_profile">
 
-<p><%= @museum.address %></p>
-<p><%= @museum.zip.split(".")[0] %></p>
-<p><%= link_to @museum.url, @museum.url%></p>
-<p><%= @museum.phone %></p>
+    <h1><%= @museum.title %></h1>
+    <p><%= @museum.address %></p>
+    <p><%= @museum.zip.split(".")[0] %></p>
+    <p><%= link_to @museum.url, @museum.url%></p>
+    <p><%= @museum.phone %></p>
 
-<p><%= button_to "Add Museum", add_museum_to_queue_path, {method: :patch, params: {museum_id: @museum.id, museum_title: @museum.title}} %></p>
+    <p><%= button_to "Add Museum", add_museum_to_queue_path, {method: :patch, params: {museum_id: @museum.id, museum_title: @museum.title}} %></p>
+
+  </div>
+
+
+  <div class="show_search_form">
+    <%= form_tag(search_path) do %>
+    <%= label_tag(:title, "Search for a Museum") %>
+      <%= text_field_tag :title, params[:title] %>
+      <%= submit_tag '🔎', class: 'submit_button' %>
+    <% end %>
+  </div>
+
+</div>
