--- a/app/assets/stylesheets/museums.scss
+++ b/app/assets/stylesheets/museums.scss
@@ -6,4 +6,30 @@
 
 h1 {
   font-family: nevis;
+  font-size: 5vh;
+}
+
+p {
+  font-family: josefin sans;
+  font-size: 3vh;
+}
+
+.museum_container {
+  position: relative;
+
+}
+
+.museum_profile {
+  position: fixed;
+  display: absolute;
+  text-align: center;
+  left: 30%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  margin-top: 200px;
+  margin-left: 15%;
+  margin-right: 15%;
+  border-style: solid;
+  border-width: 5px;
 }
