--- a/app/views/application/welcome.erb
+++ b/app/views/application/welcome.erb
@@ -1,15 +1,22 @@
-
-<div><%= button_to "Queue", queues_index_path, class: 'queue_button' %></div>
-
-
-<div class="search_form">
-  <%= form_tag(search_path) do %>
-  <%= label_tag(:title, "Search for a Museum") %>
-    <%= text_field_tag :title, params[:title] %>
-    <%= submit_tag 'Search', class: 'submit_button' %>
-  <% end %>
+<div class="wrapper">
+  
 </div>
+<div class="welcome_container">
+  <div><%= button_to "Queue", queues_index_path, class: 'show_queue_button' %></div>
 
 
+  <div class="show_search_form">
+    <%= form_tag(search_path) do %>
+    <%= label_tag(:title, "Search") %>
+      <%= text_field_tag :title, params[:title] %>
+      <%= submit_tag '🔎', class: 'show_submit_button' %>
+    <% end %>
+  </div>
 
-<%= inline_svg "museume.svg", class: 'svg-class' %>
+
+  <%= inline_svg "museume.svg", class: 'svg-class' %>
+
+  <%= button_to "View Museums by Borough", boroughs_path, method: :get, class: 'borough_button' %>
+
+
+</div>
