--- a/app/views/boroughs/show.html.erb
+++ b/app/views/boroughs/show.html.erb
@@ -1,10 +1,12 @@
 
  <h1><%= @borough.name %></h1>
+<div class="borough_show_container">
+  <ol>
+    <% @museums.where(borough_id: @borough.id).each do |museum| %>
+    <ul><%= link_to museum.title, museum %></ul><br>
+    <% end %>
+  </ol>
+  <br>
+</div>
 
-<ol>
-  <% @museums.where(borough_id: @borough.id).each do |museum| %>
-  <li><%= link_to museum.title, museum %></li><br>
-  <% end %>
-</ol>
-<br>
-<%= button_to "Back to Home", home_index_path, method: :get %>
+<%= button_to "Back to Home", home_index_path, method: :get, class: 'borough_home_button' %>
