--- a/app/views/queues/index.erb
+++ b/app/views/queues/index.erb
@@ -1,11 +1,13 @@
 <h1>Museum Queue</h1>
 
-<ul>
-  <% if @queue_museums %>
-  <% @queue_museums.each do |museum| %>
- <p><%= link_to museum.title, museum %></p>
+<div class="">
+  <ul>
+    <% if @queue_museums %>
+    <% @queue_museums.each do |museum| %>
+   <p><%= link_to museum.title, museum %></p>
+      <% end %>
     <% end %>
-  <% end %>
-</ul>
+  </ul>
+</div>
 
 <%= button_to "delete", queues_delete_path, :method => :delete %>
