--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,10 @@
   cursor: url(http://www.javascriptkit.com/dhtmltutors/cursor-hand.gif), auto;
 }
 
+.index_button {
+
+}
+
  .show_queue_button {
    display: inline-block;
    position: absolute;
@@ -67,6 +71,19 @@
    transition: background 250ms ease-in-out, transform 150ms ease;
  }
 
+ .index_button {
+   top: 100px;
+   border-radius: 50px;
+   padding: 1rem 2rem;
+   background: #0069ed;
+   color: white;
+   font-family: nevis;
+   font-size: 4vh;
+   cursor: url(http://www.javascriptkit.com/dhtmltutors/cursor-hand.gif), auto;
+   text-align: center;
+   transition: background 250ms ease-in-out, transform 150ms ease;
+ }
+
  .borough_button:hover {
    background: indigo;
    color: white;
@@ -74,7 +91,7 @@
 
  .show_queue_button:hover,
  button:focus {
-     background: pink;
+     background: red;
  }
 
  .show_queue_button:focus {
@@ -88,7 +105,7 @@
 
  .show_search_form:hover,
  button:focus {
-     background: pink;
+     background: red;
  }
 
  .show_search_form:focus {
