--- a/app/assets/stylesheets/borough.css
+++ b/app/assets/stylesheets/borough.css
@@ -22,7 +22,12 @@ h1 {
 
 .borough_show_container {
   text-align: center;
-  display: grid;
+}
+
+.borough_show_container li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 .borough_container {
