--- a/app/views/boroughs/show.html.erb
+++ b/app/views/boroughs/show.html.erb
@@ -1,11 +1,11 @@
 
  <h1><%= @borough.name %></h1>
 <div class="borough_show_container">
-  <ol>
+  <ul>
     <% @museums.where(borough_id: @borough.id).each do |museum| %>
-    <ul><%= link_to museum.title, museum %></ul><br>
+    <li><%= button_to museum.title, museum, method: :get, class: 'index_borough_button'%></li><br>
     <% end %>
-  </ol>
+  </ul>
   <br>
 </div>
 
