--- a/app/views/museums/index.erb
+++ b/app/views/museums/index.erb
@@ -5,7 +5,7 @@
     <%= text_field_tag :title, params[:title] %>
     <%= submit_tag 'Search' %>
   <% end %>
-  
+  <link rel="stylesheet" href="/app/assets/stylesheets/museums.css">
 <h1>Museum Index</h1>
 
 <% if flash[:message] %>
